--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/Main.ts",
   "scripts": {
-    "start": "ts-node-dev --respawn src/Main.ts",
+    "start": "ts-node-dev src/Main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
